# nis-security-checker

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: checklist_items.yaml  requirements_map.yaml  target_config.yaml  target_config_nvr4.yaml
docs/: requirements_mapping.md  usage_guide.md
src/: main.py  models.py  runner.py
src/engines/blackbox/: api_auth_tester.py  default_cred_checker.py  login_tester.py  port_scanner.py  protocol_auth.py  session_tester.py  ssh_checker.py  tls_checker.py
src/engines/checklist/: evidence.py  interactive.py  items.py
src/engines/graybox/: crypto_analyzer.py  cve_scanner.py  filesystem_analyzer.py  hardcoded_key_scanner.py  hash_analyzer.py  iframe_checker.py  integrity_checker.py  log_analyzer.py  memory_analyzer.py
src/report/: formatters.py  generator.py
src/report/templates/: report.html
src/utils/: crypto.py  logger.py  network.py  path_validator.py
tests/: conftest.py
tests/test_blackbox/: test_login_tester.py  test_protocol_auth.py  test_tls_checker.py
tests/test_graybox/: test_crypto_analyzer.py  test_hash_analyzer.py  test_windows_support.py
tests/test_report/: test_generator.py
tests/test_utils/: test_evidence_security.py  test_path_validator.py
