[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nis-security-checker"
version = "1.0.0"
description = "영상보안제품 보안요구사항 적합성 검사 도구"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "PyYAML>=6.0",
    "Jinja2>=3.1.0",
    "rich>=13.0.0",
]

[project.scripts]
nis-checker = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
